# backend/app/Http/Controllers/API/User/UserResourceController.php
@@ -21,6 +21,20 @@ class UserResourceController extends Controller
     }
 
     /**
+     * @OA\Get(
+     *      path="/user/user",
+     *      operationId="getPaginateUser",
+     *      tags={"User"},
+     *      summary="Paginate User",
+     *      description="Paginate User",
+     *      @OA\Response(
+     *          response=200,
+     *          description="Paginate User Data",
+     *          @OA\JsonContent()
+     *       )
+     *     )
+     */
+    /**
      * Display a listing of the resource.
      *
      * @return \Illuminate\Http\Response
@@ -42,6 +56,20 @@ class UserResourceController extends Controller
     }
 
     /**
+     * @OA\Post(
+     *      path="/user/user",
+     *      operationId="postStoreUser",
+     *      tags={"User"},
+     *      summary="Store User",
+     *      description="Store User",
+     *      @OA\Response(
+     *          response=200,
+     *          description="User Data Store",
+     *          @OA\JsonContent()
+     *       )
+     *     )
+     */
+    /**
      * Store a newly created resource in storage.
      *
      * @param  \Illuminate\Http\Request  $request
@@ -54,6 +82,20 @@ class UserResourceController extends Controller
         return response()->json($user, 201);
     }
 
+    /**
+     * @OA\Get(
+     *      path="/user/user/{id}",
+     *      operationId="getUser",
+     *      tags={"User"},
+     *      summary="Get User",
+     *      description="Get User",
+     *      @OA\Response(
+     *          response=200,
+     *          description="User Data Get",
+     *          @OA\JsonContent()
+     *       )
+     *     )
+     */
     /**
      * Display the specified resource.
      *
@@ -78,6 +120,20 @@ class UserResourceController extends Controller
     }
 
     /**
+     * @OA\Put(
+     *      path="/user/user/{id}",
+     *      operationId="putUser",
+     *      tags={"User"},
+     *      summary="Update User",
+     *      description="Update User",
+     *      @OA\Response(
+     *          response=200,
+     *          description="User Data Update",
+     *          @OA\JsonContent()
+     *       )
+     *     )
+     */
+    /**
      * Update the specified resource in storage.
      *
      * @param  \Illuminate\Http\Request  $request
@@ -91,6 +147,20 @@ class UserResourceController extends Controller
         return response()->json($user, 202);
     }
 
+    /**
+     * @OA\Delete(
+     *      path="/user/user/{id}",
+     *      operationId="deleteUser",
+     *      tags={"User"},
+     *      summary="Delete User",
+     *      description="Delete User",
+     *      @OA\Response(
+     *          response=200,
+     *          description="Status Message",
+     *          @OA\JsonContent()
+     *       )
+     *     )
+     */
     /**
      * Remove the specified resource from storage.
      *
@@ -106,6 +176,20 @@ class UserResourceController extends Controller
         ], 200);
     }
 
+    /**
+     * @OA\Get(
+     *      path="/user/dropdown",
+     *      operationId="getDropdownUser",
+     *      tags={"User"},
+     *      summary="Dropdown User",
+     *      description="Dropdown User",
+     *      @OA\Response(
+     *          response=200,
+     *          description="List Dropdown User",
+     *          @OA\JsonContent()
+     *       )
+     *     )
+     */
     public function dropdown(DropdownUserRequest $request)
     {
         $role_id = $request->get('role_id', '');
